- Send the invitation emails in the language of the participant if the participant is a known user of GO.
- Added selection for holiday file to the settings->regional settings panel and to the user dialog in the user module.
- In ticket email templates, {contact:salutation} uses the ticket contact's set salutation.
- Fixed renderer for texts in grids
- Fixed comments response in actionDisplay for displaypanels
- ZpushAdmin: renamed comments into comment because comments was a reserved parameter in GO
- Better output of showing mailbox usages in Postfixadmin cron script.

24-05-2013 4.1.71
- relational query cache didn't work
- Added supported models for Customfields so only the supported models can be chosen in the type selectbox.
- Remove duplicates buttons in calendar, tasklist and addressbook administration dialog
- Added query to remove duplicate participants in the cal_participants table. (Also adds "unique" on the event_id and email column)
- Received email attachments without a name will receive a default name.
- Fixed issue with the user calendar colors. (Sometimes it loads the wrong colors)

22-05-2013 4.1.70
- Template parser will not see {tag} with white spaces between { and } as tag to be replaced.
- The HTML email message CSS part will add style with new line characters to disable tag parsing
- Show maximum upload size.
- Reverted file thumbnail view by default
- Sales per month report for billing products
- Required custom fields are not validated server side to prevent errors when 
  hiding custom fields in the interface
- Don't use store reload but load to prevent delete to repeat after editing a rule
- Disappearing file panel bug

17-05-2013 4.1.69
- Updated Norwegian
- Fix for "This is not a recurring event" error
- Added default sort to the select document template grid and enabled name column sort

17-05-2013 4.1.68
- Demo data for linked e-mails
- Keep contact and users in sync
- Select first e-mail template as default for new users