@@ -1,10 +1,14 @@
 - Send the invitation emails in the language of the participant if the participant is a known user of GO.
 - Added selection for holiday file to the settings->regional settings panel and to the user dialog in the user module.
+
+- Fixed Thai translation
+- Updated German translation
 - In ticket email templates, {contact:salutation} uses the ticket contact's set salutation.
 - Fixed renderer for texts in grids
 - Fixed comments response in actionDisplay for displaypanels
 - ZpushAdmin: renamed comments into comment because comments was a reserved parameter in GO
 - Better output of showing mailbox usages in Postfixadmin cron script.
+- Better way of creating ZIP archive of e-mail attachments so that foreign characters will work on Windows
 
 24-05-2013 4.1.71
 - relational query cache didn't work
